# eipv

./: Cargo.toml  README.md
.github/workflows/: eipv-test.yaml
src/: ctx.rs  eip.rs  error.rs  main.rs  runner.rs  validators.rs
tests/: tests.rs  utils.rs
tests/fixtures/: preamble-author-email-and-handle.md  preamble-author-email-invalid.md  preamble-author-email-trailing-info.md  preamble-author-email-unmatched.md  preamble-author-handle-invalid.md  preamble-author-handle-trailing-info.md  preamble-author-handle-unmatched.md  preamble-author-no-contact.md  preamble-category-erc.md  preamble-category-interface.md  preamble-category-invalid.md  preamble-category-networking.md  preamble-created-malformed.md  preamble-description-too-long.md  preamble-end-malformed.md  preamble-invalid-discussions-to.md  preamble-last-call-deadline-malformed.md  preamble-malformed-eip-signed-int.md  preamble-malformed-eip.md  preamble-malformed-field.md  preamble-missing-author.md  preamble-missing-category-ok.md  preamble-missing-category.md  preamble-missing-created.md  preamble-missing-discussions-to.md  preamble-missing-eip.md  preamble-missing-status.md  preamble-missing-title.md  preamble-missing-type.md  preamble-replaces-single.md  preamble-requires-malformed.md  preamble-requires-multiple.md  preamble-requires-no-whitespace.md  preamble-requires-out-of-order.md  preamble-requires-single.md  preamble-requires-too-much-whitespace.md  preamble-resolution-malformed.md  preamble-review-period-end-malformed.md  preamble-start-malformed.md  preamble-status-abandoned.md  (+18 more)
