[package]
name = "eipv"
version = "0.3.0"
authors = ["lightclient <lightclient@protonmail.com>"]
license = "MIT OR Apache-2.0"
description = "Ethereum Improvement Proposal validator"
repository = "https://github.com/lightclient/eipv"
categories = ["command-line-utilities"]
readme = "README.md"
edition = "2018"

[dependencies]
anyhow = "1.0"
clap = "=3.0.0-beta.2"
chrono = "0.4"
regex = "1.3"
url = "2.1"

[dev-dependencies]
assert_cmd = "1.0"
predicates = "1.0"
